# CodexDataLab

./: .bumpversion.cfg  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLAN.md  README.md  VISION.md  setup.cfg
.ci/: build.sh  release-notes-prompt.txt  release-notes.sh
.codex/: .gitignore
.codex/skills/git-stats/: SKILL.md
.codex/skills/git-stats/scripts/: git-stats.py
.codex/skills/terminal-shot/: SKILL.md  config.json  package-lock.json  package.json
.codex/skills/terminal-shot/assets/: index.html
.codex/skills/terminal-shot/scripts/: server.js  tape-runner.js  terminal-shot.js
.codex/skills/terminal-shot/tapes/: demo.yaml  mvp_dataset_select.yaml
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
scripts/: create_dev_workspace.py  install.sh  update_codex_app_server_schema.py
src/codexdatalab/: __init__.py  __main__.py  agent_log.py  analysis.py  app.py  app.tcss  codex_app_server.py  codex_home.py  data_ops.py  fetch_ops.py  git_utils.py  mcp_server.py  plot_ops.py  plotting.py  recipe_ops.py  report_ops.py  settings.py  skill_store.py  summary_ops.py  tool_harness.py  tool_registry.py  transform_ops.py  utils.py  workspace.py  workspace_scaffold.py
tests/: test_fetch_ops.py  test_workspace_scaffold.py
tests/fixtures/: orders.csv  people.csv
