[metadata]
name = codexdatalab
version = 0.0.1
description = CodexDataLab
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Szymon Prajs

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
install_requires =
    textual>=0.50
include_package_data = True

[options.packages.find]
where = src

[options.package_data]
codexdatalab = *.tcss

[options.entry_points]
console_scripts =
    codexdatalab = codexdatalab.__main__:main
    codala = codexdatalab.__main__:main

[bumpversion]
current_version = 0.0.1
commit = True
tag = True
tag_name = v{new_version}
message = Bump version: {current_version} → {new_version}

[bumpversion:file:setup.cfg]
search = version = {current_version}
replace = version = {new_version}

[bumpversion:file:src/codexdatalab/__init__.py]
search = __version__ = "{current_version}"
replace = __version__ = "{new_version}"
