[metadata]
name = codexdatalab
version = 0.1.0
description = CodexDataLab
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_files = LICENSE
author = Szymon Prajs

[options]
package_dir = 
	= src
packages = find:
python_requires = >=3.10
install_requires =
    polars>=0.20
    textual>=0.50
include_package_data = True

[options.extras_require]
test =
    pytest

[options.packages.find]
where = src

[options.package_data]
codexdatalab = *.tcss

[options.entry_points]
console_scripts = 
	codexdatalab = codexdatalab.__main__:main
	codala = codexdatalab.__main__:main
